Complete version of the project

--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,42 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>mavenProject</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>julia.kaminska.coder</groupId>
+    <artifactId>parent-module</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>delivery</module>
+        <module>delivery-administration</module>
+        <module>common-module</module>
+        <module>integration-module</module>
+        <module>bom-module</module>
+    </modules>
+
+    <dependencyManagement>
+        <dependencies>
+        <dependency>
+            <groupId>julia.kaminska.coder</groupId>
+            <artifactId>bom-module</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        </dependencies>
+    </dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>flatten-maven-plugin</artifactId>
+        </dependency>
+    </dependencies>
+
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
+
 </project>
