--- a/delivery-administration/application/pom.xml
+++ b/delivery-administration/application/pom.xml
@@ -5,16 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>delivery</artifactId>
+        <artifactId>delivery-administration</artifactId>
         <groupId>julia.kaminska.coder</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <packaging>jar</packaging>
 
-
-    <groupId>${project.groupId}</groupId>
-    <artifactId>delivery</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>delivery-administration-application</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
