--- a/delivery-administration/domain/pom.xml
+++ b/delivery-administration/domain/pom.xml
@@ -5,20 +5,30 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>delivery</artifactId>
+        <artifactId>delivery-administration</artifactId>
         <groupId>julia.kaminska.coder</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
+
     </parent>
     <packaging>jar</packaging>
 
-    <groupId>${project.groupId}</groupId>
-    <artifactId>domain</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>delivery-administration-domain</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>java7</id>
+            <properties>
+                <maven.compiler.source>1.7</maven.compiler.source>
+                <maven.compiler.target>1.7</maven.compiler.target>
+            </properties>
+        </profile>
+    </profiles>
 
 </project>
